# learning-how-to-code-better

./: .gitignore  README.md  pyproject.toml
calculator/: __init__.py  operations.py
docs/: a2a-quickstart.md  a2a-roadmap.md  clean-code.md  solid.md
examples/: __init__.py
examples/bad_vs_good/: __init__.py  dependency_inversion_bad.py  dependency_inversion_good.py  meaningful_names_bad.py  meaningful_names_good.py  single_responsibility_bad.py  single_responsibility_good.py
src/: __init__.py
src/agent/: .env.example  agent.py
src/core/: __init__.py  contracts.py  models.py  study_catalog.py  study_explainer.py
src/remote_a2a/: __init__.py
src/remote_a2a/study_explainer/: __init__.py  agent.py
src/tools/: __init__.py  study_lookup.py
tests/: test_a2a_remote_agent.py  test_examples.py  test_operations.py  test_study_catalog.py  test_study_explainer.py  test_study_lookup.py
